2.8.1
    - Fixed bug in PostgreSQL export/import.
    - Improved handling of file fields written in the style exported from Zotero.
2.8
    - Applied Oscar Gustafsson's fix for IEEEXplore fetcher.
    - Added capability to remove databases from SQL database.
    - Fixed customization of entries in Biblatex mode.
    - Modified Google Scholar fetcher to adapt to changes to web site.
2.8 beta 2
    - Improvements to SQL export and import. Fixed bug where subsequent exports to same
      database would fail. Can now save multiple bib bases to a single SQL database.
    - "abbr" modifier in BibTeX key generator now skips parentheses.
    - Minor change to FirstPage formatter. Now splits at spaces as well as hyphens,
      and returns original field content if only one page number is found.
    - When using the preferences import command line option, preferences are now imported
      before load/import/export operations are handled.
    - Applied Nicolas Pavillon's patch for proper keystroke handling on Mac OS X.
    - Applied Ivanilton Polato's patch for handling multi-line fields in CSV export.
    - Fixed bug: "Send as Email" did not handle absolute paths correctly.
    - Fixed bug 3472991: Search: "Highlight Words" inconsistent
    - Fixed bug 2933201: Exporting InProceedings to Word 2007
    - Fixed bug 3146059: Error in translating author field to MS Office
    - Fixed bug: entering field names containing capital letters in table columns tab
      in Preferences makes the columns empty.
2.8 beta
    - Fixed issues with ACM portal fetcher using Benjamin Langmann's patch, plus an
      additional minor fix.
    - A large list of journal abbreviations is now loaded by default.
    - Added global option to allow file links relative to the bib file location, in addition
      to the global or database- or user-specific file directory.
    - Fixed bug 3434674: Reviewing changes overwrites groups.